syntax = "proto3";

package pb;

import "admin.proto";

option go_package = 'github.com/MonitorAllen/nostalgia/pb';

message CreateAdminRequest {
  string name = 1;
  string password = 2;
  optional bool is_active = 3;
  optional int64 role_id = 4;
}

message CreateAdminResponse {
  Admin admin = 1;
}